# bodypose-dashboard

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  analytics.html  app.js  deploy.sh  docker-compose.yml  index.html  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  style.css
docs/: deployment.md  index.md
pose-fusion/: index.html
pose-fusion/css/: style.css
pose-fusion/js/: main.js
