[project]
name = "bodypose-dashboard"
version = "1.0.0"
description = "Real-time 3D human pose estimation and visualization dashboard"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "roohan-514" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
